--- a/main.html
+++ b/main.html
@@ -10,7 +10,76 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	 <center>
+    <h1>
+      HTML Assignment #3
+    </h1>
+    <table class="middle" border="1" id="table-1">
+      <tr id="t11">
+        <td>left</td>
+        <td class="center">center</td>
+        <td class="right">right</td>
+      </tr>
+      <tr id="t12">
+        <td>left</td>
+        <td class="center">center</td>
+        <td class="right">right</td>
+      </tr>
+      <tr id="t13">
+        <td >left</td>
+        <td class="center">center</td>
+        <td class="right">right</td>
+      </tr>
+    </table>
 
+    <table border="1" class="middle" id="table-2">
+      <tr id="t21">
+        <td colspan="6"></td>
+      </tr>
+      <tr id="t22">
+        <td rowspan="4"></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr id="t23">
+        <td></td>
+        <td colspan="3" rowspan="2"></td>
+        <td></td>
+      </tr>
+      <tr id="t24">
+        <td></td>
+        <td></td>
+      </tr>
+      <tr id="t25">
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr id="t26">
+        <td colspan="6"></td>
+      </tr>
+    </table>
+
+    <table border="1" class="middle" id="table-3">
+      <tr id="t31">
+        <td colspan="3"></td>
+      </tr>
+      <tr id="t32">
+        <td id="t34"></td>
+        <td id="t-image">
+        </td>
+        <td id="t35"></td>
+      </tr>
+      <tr id="t33">
+        <td colspan="3"></td>
+      </tr>
+    </table>
+  </center>
 </body>
 
 </html>
